crates/edm-core/tests/snapshots/render__trade_log_wide_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== TRADES  3 requests over 2 rounds — hold is full =================================================
+---+------------------------------+-------+------------+----------------+------+-------------+
| # | Commodity                    |   Qty |       Unit |          Total | HTTP |       Cargo |
+===+==============================+=======+============+================+======+=============+
| 1 | Advanced Catalysers Mk II P~ | 1,024 | 12,345,678 | 12,641,974,272 |  200 | 1,024/1,024 |
| 2 | Onionhead Alpha Strain       |    16 |      8,150 |        130,400 |  418 | 1,040/1,024 |
+---+------------------------------+-------+------------+----------------+------+-------------+
| 3 | Hydrogen Fuel                |     0 |        110 |              0 |    - | 1,040/1,024 |
+---+------------------------------+-------+------------+----------------+------+-------------+
